# toks

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  main.py  pyproject.toml
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: spec.md  technical.md
scripts/: release.sh
src/count_tokens/: __init__.py  __main__.py  cli.py  config.py  output.py  registry.py  runner.py  setup.py
src/count_tokens/providers/: __init__.py  claude.py  gemini.py  grok.py  openai.py
src/toks/: __init__.py  __main__.py  cli.py  config.py  output.py  registry.py  runner.py  scanner.py  setup.py
src/toks/providers/: __init__.py  base.py  claude.py  gemini.py  grok.py  openai.py
tests/: conftest.py  test_cli.py  test_config.py  test_e2e_pipeline.py  test_preflight.py  test_provider_matrix.py  test_providers.py  test_registry.py  test_scanner.py
tests/fixtures/: document.docx  hello.txt
tests/fixtures/tree/: readme.txt
tests/fixtures/tree/src/: utils.py
