[project]
name = "toks"
version = "0.3.2"
description = "Count tokens for files across LLM providers from the command line"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Corey Gallon", email = "366332+captivus@users.noreply.github.com"},
]
keywords = ["tokens", "llm", "cli", "context-window", "tokenizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Text Processing",
]
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "pathspec>=1.0.4",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "tomli-w>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/captivus/toks"
Repository = "https://github.com/captivus/toks"
"Bug Tracker" = "https://github.com/captivus/toks/issues"
Documentation = "https://github.com/captivus/toks/tree/master/docs"

[project.scripts]
toks = "toks.cli:app"
ct = "toks.cli:app"

[tool.pytest.ini_options]
markers = [
    "claude: tests requiring Anthropic API key",
    "openai: tests requiring OpenAI API key",
    "gemini: tests requiring Gemini API key",
    "grok: tests requiring xAI API key",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
